vlib/v/checker/tests/fixed_array_init_with_uninitialized_struct_references_err.vv
struct Person {
	name string
}

fn main() {
	println([4]&Person{})
}
